// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text basic 1`] = `
<h1
  className="typography typography_size-h1 typography_color-basic"
>
  basic
</h1>
`;

exports[`Text brand 1`] = `
<h1
  className="typography typography_size-h1 typography_color-brand"
>
  brand
</h1>
`;

exports[`Text brand-1 1`] = `
<h1
  className="typography typography_size-h1 typography_color-brand-1"
>
  brand-1
</h1>
`;

exports[`Text disabled 1`] = `
<h1
  className="typography typography_size-h1 typography_color-disabled"
>
  disabled
</h1>
`;

exports[`Text error 1`] = `
<h1
  className="typography typography_size-h1 typography_color-error"
>
  error
</h1>
`;

exports[`Text h1 1`] = `
<h1
  className="typography typography_size-h1 typography_color-basic"
>
  h1
</h1>
`;

exports[`Text h2 1`] = `
<h2
  className="typography typography_size-h2 typography_color-basic"
>
  h2
</h2>
`;

exports[`Text h3 1`] = `
<h3
  className="typography typography_size-h3 typography_color-basic"
>
  h3
</h3>
`;

exports[`Text h4 1`] = `
<h4
  className="typography typography_size-h4 typography_color-basic"
>
  h4
</h4>
`;

exports[`Text headers 1`] = `
<h1
  className="typography typography_size-h1 typography_color-headers"
>
  headers
</h1>
`;

exports[`Text inherit 1`] = `
<h1
  className="typography typography_size-h1 typography_color-inherit"
>
  inherit
</h1>
`;

exports[`Text inverse 1`] = `
<h1
  className="typography typography_size-h1 typography_color-inverse"
>
  inverse
</h1>
`;

exports[`Text link 1`] = `
<h1
  className="typography typography_size-h1 typography_color-link"
>
  link
</h1>
`;

exports[`Text secondary 1`] = `
<h1
  className="typography typography_size-h1 typography_color-secondary"
>
  secondary
</h1>
`;

exports[`Text success 1`] = `
<h1
  className="typography typography_size-h1 typography_color-success"
>
  success
</h1>
`;

exports[`Text warning 1`] = `
<h1
  className="typography typography_size-h1 typography_color-warning"
>
  warning
</h1>
`;
